agent configuration added.